# Go2-Software

./: .gitignore  README.md
PC/: Setup.sh
PC/go2_ws/: create_map.py
PC/go2_ws/src/: prohibition_map.pgm
PC/go2_ws/src/g1/: package.xml  setup.cfg  setup.py
PC/go2_ws/src/g1/g1/: g1_sequence.py  g1_up.py  teleop_key.py
PC/go2_ws/src/go2_demo/: CMakeLists.txt
PC/go2_ws/src/go2_demo/dog_base/: CMakeLists.txt
PC/go2_ws/src/go2_demo/walk_demo/: CMakeLists.txt
PC/go2_ws/src/joystick_teleop/: setup.py
PC/go2_ws/src/my_go2_launch/: package.xml  setup.cfg  setup.py  setup.py.save
PC/go2_ws/src/my_go2_launch/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
PC/go2_ws/src/my_go2_launch/install/my_go2_launch/lib/my_go2_launch/: pointcloud_to_laserscan_custom
PC/go2_ws/src/my_go2_launch/install/my_go2_launch/share/my_go2_launch/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
PC/go2_ws/src/my_go2_launch/install/my_go2_launch/share/my_go2_launch/launch/: pointcloud_to_laserscan.launch.py
PC/go2_ws/src/my_go2_launch/launch/: pointcloud_to_laserscan.launch.py  view_urdf_tfs.launch.py
PC/go2_ws/src/my_go2_launch/log/: latest_build
PC/go2_ws/src/my_go2_launch/maps/lab/: map.yaml
PC/go2_ws/src/my_go2_launch/my_go2_launch/: gstreamer_image_publisher.py  laserscan_pass_through.py  odom_publisher.py  pointcloud_to_laserscan_qos.py  speak.py
PC/go2_ws/src/my_go2_launch/my_go2_launch/go2_webrtc_driver/: webrtc_driver.py
PC/go2_ws/src/object_classification/: CMakeLists.txt  package.xml
PC/go2_ws/src/object_classification/srv/: ClassifyDino.srv
PC/go2_ws/src/robot_description/: setup.py
PC/go2_ws/src/robot_description/launch/: start_map.launch.py  view_urdf.launch.py
PC/go2_ws/src/robot_description/robot_description/: joint_state_relay.py
PC/go2_ws/src/surge_et_ambula/: package.xml  setup.cfg  setup.py
PC/go2_ws/src/surge_et_ambula/launch/: go2_up.launch.py
PC/go2_ws/src/surge_et_ambula/maps/lab/: map.pgm  map.yaml  prohibition_map.yaml
PC/go2_ws/src/surge_et_ambula/surge_et_ambula/launch/: go2_up.launch.py
PC/go2_ws/src/vision_pkg/: package.xml  setup.py
PC/go2_ws/src/vision_pkg/vision_pkg/: dino_client.py  grounding_dino_server.py  image_subscriber.py  webcam_publisher.py  yolo_node.py
Robot/Mauricio/go2_ws/src/go2_demo/dog_base/: dogbase.cpp
Robot/Mauricio/go2_ws/src/go2_demo/standsit_demo/: CMakeLists.txt
Robot/Mauricio/go2_ws/src/test/: CMakeLists.txt  package.xml
Robot/Mauricio/go2_ws/src/test/src/: testgo2_1.cpp
Robot/go2_robot_ws/src/YDLidar-SDK/src/: CYdLidar.cpp
Robot/go2_robot_ws/src/joystick_teleop/joystick_teleop/: joystick_teleop.py
Robot/go2_robot_ws/src/ydlidar_ros2_driver/: CMakeLists.txt  package.xml
Robot/go2_robot_ws/src/ydlidar_ros2_driver/launch/: ydlidar_launch.py
Robot/go2_robot_ws/src/ydlidar_ros2_driver/src/: ydlidar_ros2_driver_node.cpp
